--- a/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Ocene/OceneList.xaml
+++ b/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Ocene/OceneList.xaml
@@ -20,31 +20,31 @@
                                SelectedItem="{x:Bind vm.SelectedItem, Mode=TwoWay}">
             <controls:DataGrid.Columns>
                 <controls:DataGridTextColumn
-                        Header="ID prijave ispita"
+                        x:Uid="/Podaci/IDIspita"
                         Binding="{Binding IdIspita}"
                         Tag="IdIspita"/>
                 <controls:DataGridTextColumn
-                        Header="Broj indeksa studenta"
+                        x:Uid="/Podaci/BrojIndeksa"
                         Binding="{Binding IdIspitaNavigation.BrojIndeksaStudenta}"
                         Tag="IdIspitaNavigation.BrojIndeksaStudenta"/>
                 <controls:DataGridTextColumn
-                        Header="Student"
+                        x:Uid="/Podaci/Student"
                         Binding="{Binding IdIspitaNavigation.BrojIndeksaStudentaNavigation.PunoIme}"
                         Tag="IdIspitaNavigation.BrojIndeksaStudentaNavigation.PunoIme"/>
                 <controls:DataGridTextColumn
-                        Header="Predmet"
+                        x:Uid="/Podaci/Predmet"
                         Binding="{Binding IdIspitaNavigation.IdPredmetaNavigation.Naziv}"
                         Tag="IdIspitaNavigation.IdPredmetaNavigation.Naziv"/>
                 <controls:DataGridTextColumn
-                        Header="Rok"
+                        x:Uid="/Podaci/NazivRoka"
                         Binding="{Binding IdIspitaNavigation.NazivRoka}"
                         Tag="IdIspitaNavigation.NazivRoka"/>
                 <controls:DataGridTextColumn
-                        Header="Godina"
+                        x:Uid="/Podaci/Godina"
                         Binding="{Binding IdIspitaNavigation.Godina}"
                         Tag="IdIspitaNavigation.Godina"/>
                 <controls:DataGridTextColumn
-                        Header="Ocena"
+                        x:Uid="/Podaci/Ocena"
                         Binding="{Binding Ocena1}"
                         Tag="Ocena1"/>
             </controls:DataGrid.Columns>
