--- a/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Referenti/ReferentiList.xaml
+++ b/Aplikacija/Studentska služba/Studentska služba/Views/Podaci/Referenti/ReferentiList.xaml
@@ -20,15 +20,15 @@
                                SelectedItem="{x:Bind vm.SelectedItem, Mode=TwoWay}">
             <controls:DataGrid.Columns>
                 <controls:DataGridTextColumn
-                        Header="Username"
+                        x:Uid="/Podaci/KorisnickoIme"
                         Binding="{Binding UsernameReferenta}"
                         Tag="UsernameReferenta"/>
                 <controls:DataGridTextColumn
-                        Header="Ime"
+                        x:Uid="/Podaci/Ime"
                         Binding="{Binding Ime}"
                         Tag="Ime"/>
                 <controls:DataGridTextColumn
-                        Header="Prezime"
+                        x:Uid="/Podaci/Prezime"
                         Binding="{Binding Prezime}"
                         Tag="Prezime"/>
             </controls:DataGrid.Columns>
